# nlp662-spamdetection

./: .gitignore  Makefile  README.md  SpamDetection.ipynb  SpamDetection.py  pyproject.toml  rc-SpamDetection.ipynb  testmodel.py
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
www/: package-lock.json  package.json
www/public/: app.py  routes.py
www/src/: App.js  Upload.jsx  index.css
